[package]
name = "phantom"
version = "0.7.7"
edition = "2021"

[dependencies]
crossterm = "0.26"
tui = { version = "0.19", default-features = false, features = ['crossterm'] }
ropey = "1.5"
syntect = { version = "5.0", features = ["default-fancy"] }
unicode-width = "0.1"
clipboard = { version = "0.5.0", optional = true }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
serde_json = "1.0"

[features]
default = ["clipboard"]
clipboard = ["dep:clipboard"]