[package]
name = "phantom"
version = "0.7.8"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
tui = { version = "0.19", default-features = false, features = ['crossterm'] }
ropey = "1.6"
syntect = { version = "5.2", features = ["default-fancy"] }
unicode-width = "0.2"
copypasta = "0.10.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
serde_json = "1.0"